package core.management.jobApplication.domain;

public enum NotificationStatus {
    UNSEND,
    SEND;
}
