package core.management.jobApplication.domain;

import eapli.framework.domain.model.ValueObject;

public enum RequirementsEvaluation implements ValueObject {

    ACCEPTED,
    REJECTED,
    PENDING;

}
