@startuml DomainModel
package JobOpeningAgg {

    class JobOpening {
        +id: JobReference
        +recruitmentProcess: RecruitmentProcess
    }

    class JobReference {
        + customerCode: String
        + jobNumber: int
    }

    class RecruitmentProcess {
        +id: int
        +status: RecruitmentProcessStatus
        +phases: List<Phase>
    }

    class Phase {
        +id: PhaseName
        +startDate: StartDate
        +endDate: EndDate
        +status: PhaseStatus
    }

    enum PhaseName {
            APPLICATION,
            SCREENING,
            INTERVIEWS,
            ANALYSIS,
            RESULT
    }

    class StartDate {
        +date: Date
    }

    class EndDate {
        +date: Date
    }

    enum PhaseStatus {
        OPEN
        CLOSED
    }

    enum RecruitmentProcessStatus {
        UNINITIALIZED
        IN_PROGRESS
        FINISHED
    }

    JobOpening --> RecruitmentProcess
    JobOpening --> JobReference
    RecruitmentProcess --> RecruitmentProcessStatus
    RecruitmentProcess --> Phase : "Is separated into"
    Phase --> PhaseName
    Phase --> StartDate
    Phase --> EndDate
    Phase --> PhaseStatus
}

package JobApplicationAgg {
    class JobApplication {
        +id: Long
        +requirementsEvaluation: RequirementsEvaluation
        +notificationStatus : NotificationStatus
        +interview: Interview
    }

    enum RequirementsEvaluation {
        PENDING
        ACCEPTED
        REJECTED
    }

    enum NotificationStatus {
        UNSEND
        SEND
    }

    class Interview {
        +interviewGrade: InterviewGrade
    }

    class InterviewGrade {
        +grade: int
    }

    JobApplication --> RequirementsEvaluation
    JobApplication --> Interview
    JobApplication --> JobOpening : Refers to
    JobApplication --> NotificationStatus
    Interview --> InterviewGrade
}

package RankAgg {
    class Rank {
        +id: Long
        +rankStatus: RankStatus
    }

    enum RankStatus {
        UNSTARTED,
        STARTED,
        FINISHED
    }

    Rank --> RankStatus
    JobOpening --> Rank : "has"
}

@enduml